--- a/main.html
+++ b/main.html
@@ -3,15 +3,26 @@
 <head>
 	<meta charset="utf-8">
 	<title>PORTFOLIO</title>
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="html/css/main.css">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="main">
-		<div class="content">
-			<h1>2020 KIM MIN YOUNG</h1>
-			<a href = "portfolio.html"><img src="images/main.png"></a>
-		</div>
-	</div>
+<div class="main">
+	<div class="container">
+	    <div class="row">
+	    	<div class="col-4"></div>
+		    <div class="col-4">
+			    <h1>2020 KIM MIN YOUNG</h1>
+			    <a href = "html/portfolio.html"><img src="html/images/main.png"></a>
+	  	    </div>
+	  	    <div class="col-4"></div>
+	    </div>
+    </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 </body>
 </html>	
